# tcenv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  justfile  proj
.devcontainer/: devcontainer.json
cmake/: llvm.cmake  tcenv.cmake
docker/: Dockerfile.proj  Dockerfile.proj-deb
oci/: Dockerfile.proj  Dockerfile.stage0
src/: archive_util.cpp  archive_util.cppm  archive_util.hpp  c_api.cppm  c_api.hpp  clangd_fixer.hpp  common.hpp  control_flow.hpp  download_step.cpp  download_step.cppm  download_step.hpp  download_util.cpp  download_util.cppm  download_util.hpp  error.cpp  error.cppm  error.hpp  finally.hpp  log.cppm  log.hpp  logger.cppm  logger.hpp  main.cpp  patcher.cpp  patcher.hpp  recipe.cppm  recipe_builder.cpp  recipe_builder.cppm  recipe_builder.hpp  recipe_repo.cpp  recipe_repo.cppm  recipe_repo.hpp  recipe_types.cpp  recipe_types.cppm  recipe_types.hpp  store_util.cpp  store_util.cppm  store_util.hpp  subproc_step.cpp  subproc_step.hpp  (+2 more)
